php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #20079 return valuse of ora_logoff() error
Submitted: 2002-10-25 04:12 UTC Modified: 2003-01-15 20:53 UTC
Votes:4
Avg. Score:5.0 ± 0.0
Reproduced:4 of 4 (100.0%)
Same Version:0 (0.0%)
Same OS:0 (0.0%)
From: yincheng at enetedu dot com Assigned:
Status: Closed Package: Oracle related
PHP Version: 4.2.3 OS: RedHat 7.3
Private report: No CVE-ID: None
 [2002-10-25 04:12 UTC] yincheng at enetedu dot com
<?php
$conn = ora_logon("scott","tiger");
echo $conn;
echo ora_error($conn);
$logoff=ora_logoff($conn);
if ($logoff==false) {
echo "<p>logoff is return false</p>";
}
if ($logoff==true) {
echo "<p>logoff is return true</p>";
}
echo ora_error($conn);
?>
The output is:

Resource id #1ORA-00000: normal, successful completion

logoff is return false

Warning: ora_error(): 1 is not a valid Oracle-Connection/Cursor resource in /home/swxiao/public_html/logoff.php on line 12

I think that the return values of ora_logoff() is false when success logoff,but it should return true when success logoff.
Is this a bug?
Thanks!

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-01-15 20:53 UTC] iliaa@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 28 03:00:01 2026 UTC