Fixed bug #20079 (made ora_logoff return TRUE on success).