ext/oracle/oracle.c
@@ -20,7 +20,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: oracle.c,v 1.81 2002/12/31 16:07:10 sebastian Exp $ */
+/* $Id: oracle.c,v 1.82 2003/01/16 02:53:43 iliaa Exp $ */
 
 /* comment out the next line if you're on Oracle 7.x and don't have the olog 
    call. */
@@ -601,6 +601,8 @@ PHP_FUNCTION(ora_logoff)
 	ZEND_FETCH_RESOURCE2(conn, oraConnection *, arg, -1, "Oracle-Connection", le_conn, le_pconn);
 
 	zend_list_delete(Z_LVAL_PP(arg));
+
+	RETURN_TRUE;
 }
 /* }}} */
 
